Removing 1.5 dependency